--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
     container_name: car-telemetry-pgadmin
     restart: unless-stopped
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@local.dev
-      PGADMIN_DEFAULT_PASSWORD: admin_pw
+      PGADMIN_DEFAULT_EMAIL: master@local.com
+      PGADMIN_DEFAULT_PASSWORD: 123
     ports:
       - "5050:80"
     depends_on:
@@ -36,8 +36,8 @@ services:
       dockerfile: apps/api/Dockerfile
     container_name: car-telemetry-api
     restart: unless-stopped
-    expose:
-      - "3000"
+    ports:
+      - "3001:3000"
     depends_on:
       postgres:
         condition: service_healthy
@@ -48,8 +48,8 @@ services:
       dockerfile: apps/web/Dockerfile
     container_name: car-telemetry-web
     restart: unless-stopped
-    expose:
-      - "3000"
+    ports:
+      - "3000:3000"
     depends_on:
       api:
         condition: service_started
